feat: 실시간 이미지 학습 api 구현 완료
