# backend/src/docs/swagger.json
@@ -371,6 +371,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "parking"
+                ],
                 "summary": "학습 실행",
                 "parameters": [
                     {
@@ -448,6 +451,61 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/response.ResLearningResults"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/v0.1/parking/{projectId}/learning/live": {
+            "post": {
+                "description": "OpenCV를 사용하여 주차면 학습을 실행합니다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "parking"
+                ],
+                "summary": "실시간 이미지 학습 실행",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "프로젝트 ID",
+                        "name": "projectId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "학습 요청 데이터",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.ReqLiveLearning"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ResLiveLearning"
                         }
                     },
                     "400": {
@@ -1465,6 +1523,29 @@
                 }
             }
         },
+        "request.ReqLiveLearning": {
+            "type": "object",
+            "properties": {
+                "iterations": {
+                    "type": "integer"
+                },
+                "learningPath": {
+                    "type": "string"
+                },
+                "learningRate": {
+                    "type": "number"
+                },
+                "projectId": {
+                    "type": "string"
+                },
+                "roiPath": {
+                    "type": "string"
+                },
+                "varThreshold": {
+                    "type": "number"
+                }
+            }
+        },
         "request.UpdateRoiRequest": {
             "type": "object",
             "properties": {
@@ -1765,6 +1846,14 @@
                 },
                 "total_files": {
                     "type": "integer"
+                }
+            }
+        },
+        "response.ResLiveLearning": {
+            "type": "object",
+            "properties": {
+                "folder_path": {
+                    "type": "string"
                 }
             }
         },
